Bug 393342: read the download.dir pref as a nsILocalFile instead of just a file path (fixes automatic downloads on Mac), patch by Jim Mathies <jmathies@mozilla.com>, r=me